Traffic-Management-Basics/skywalking/skywalking-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: skywalking-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "skywalking.magedu.com"
  gateways:
  - skywalking-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: skywalking-ui
        port:
          number: 80
---
